# AutoDoc-Agent

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  PRD.md  README.md  TASK_COMPLETION_SUMMARY.md  pyproject.toml
demos/: demo_cache_usage.py  demo_enhanced_llm_integration.py  demo_llm_providers.py  demo_ollama_fallback.py  demo_ollama_integration.py  demo_retry_fallback.py
docs/: installation.md
docs/examples/: README.md
docs/examples/python-simple/: pyproject.toml
docs/examples/python-simple/src/: calculator.py
examples/: module_mapper_demo.py  project_mapping.json
src/cli/: __init__.py  __main__.py  commands.py
src/config/: default_config.yaml
src/core/: ast_cache.py  ast_parser.py  go_ast_parser.py  java_ast_parser.py  language_detector.py  module_mapper.py  test_java_ast_parser.py  test_module_mapper.py  test_typescript_ast_parser.py  typescript_ast_parser.py
src/llm/: claude_integration.py  ollama_integration.py  openai_integration.py  providers.py  retry_fallback.py
tasks/: prd-autodoc-agent.md  tasks-prd-autodoc-agent.md
tests/: __init__.py  test_ast_cache.py  test_ast_parser.py  test_cli_commands.py  test_enhanced_llm_integration.py  test_go_ast_parser.py  test_java_ast_parser.py  test_language_detector.py  test_llm_providers.py  test_module_mapper.py  test_ollama_integration.py  test_retry_fallback.py  test_typescript_ast_parser.py
