[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "calculator-example"
version = "0.1.0"
description = "计算器示例项目 - 演示AutoDoc Agent功能"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "AutoDoc Agent Team", email = "team@autodoc-agent.com"}
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
calculator = "src.calculator:main"

[tool.hatch.build.targets.wheel]
packages = ["src"] 